<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".FullscreenActivity" >
    
	<Button 
        android:onClick="getInformation"
        android:tag="called"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/refresh" />
    
    <TextView android:id="@+id/merchant_label"
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
        android:text="@string/merchant_prompt" />
    
    <Spinner
    android:id="@+id/spinner_merchant"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:drawable/btn_dropdown"
    android:spinnerMode="dialog"
    android:textSize="40dip" />
    
    <TextView android:id="@+id/client_label"
       	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
        android:text="@string/client_prompt" />
    
    <Spinner
    android:id="@+id/spinner_client"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:drawable/btn_dropdown"
    android:spinnerMode="dialog"
    android:textSize="40dip" />
 
    <EditText android:id="@+id/metric"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/metric" />
    
    <Button
        android:onClick="sendData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm" />
    
    
    <TextView android:id="@+id/display_sending"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    
</LinearLayout>
